# fringeproc

./: .gitexternals  .gitignore  CMakeLists.txt  README  fringeproc.vpj  fringeproc_python.wpr  index.html  params.json  readme.org
cython/: CMakeLists.txt  exception.pxd  exception.pyx  filters.pxd  filters.pyx
filters/: CMakeLists.txt  Doxyfile  aux.h  convolution.c  convolution.h  demodula.c  demodula.h  document.c  follower.cc  follower.h  fringeproc.c  fringeproc.h  matrix.cc  matrix.h  mfuntions.c  mfuntions.h  optimization.c  optimization.h  seguidor.cc  seguidor.h
imcore/: CMakeLists.txt  array.cc  array.h  demodgabor.cc  demodgabor.h  exception.cc  exception.h  floodfill.cc  floodfill.h  gabor_gears.cc  gabor_gears.h  imcore_config.h  linalg.c  linalg.h  numpy.cc  numpy.h  scanner.cc  scanner.h  seguidor.cc  seguidor.h  unwrap.cc  unwrap.h  unwrap_gears.c  unwrap_gears.h
python/: CMakeLists.txt  __init__.py  fringeproc.py  fringeproc.wpr  fringes.py  gabor_demod.py
python/doc/: Makefile
python/doc/source/: conf.py  fringes.rst
python/gui/: CMakeLists.txt  __init__.py  actiondialog.py  constrains.py  document.py  filedialog.py  fringeproc.py  image.py  imviewer.py  maingui.py  maingui.ui  mainwin.ui  mainwindow.py  pixmapitem.py  process.py  ui_maingui.py  ui_mainwin.py
python/imcore/: CMakeLists.txt  __init__.py  cvmaps.i  fringeproc.i  gabor.i  scanner.i  unwrap.i
python/pygabor/: gabor_demod.py  teting.ipynb
tests/: CMakeLists.txt
tests/data/images/: 1_7.tif  1_8.tif  2_1.tif  2_3.tif  2modos_holography.tif  Corre40  Corre41  Corre42  Corre43  Corre44  Corre45  ESPI4.tif  PHASE.TIF  huella1.tif  im11.tif  im1_f.tif  interferogram01.tif
tests/data/images/fingerprint/: 003_R02_decoded_fing-1000-lossy_nist.pnm  003_R02_nist.pnm  007_R02_decoded_fing-1000-lossy_nist.pnm  007_R02_nist.pnm  1_6.tif  2_2.tif
tests/gabor_demod/: CMakeLists.txt  cvmaps.i  demodgabor.cc  demodgabor.h  demodgabor.i  freqscan.cc  freqscan.h  gabor_gears.cc  gabor_gears.h  main.cc  scanner.cc  scanner.h  scanner.i
tests/opencv_tests/: CMakeLists.txt  main.cc
tests/seguidor/: CMakeLists.txt  seguidor.cc
tests/unwrap/: CMakeLists.txt  c_unwrap.cc  c_unwrap.h  dlgprogressresult.py  dlgresultprogress.ui  dlgunwrap.py  dlgunwrap.ui  fringeprocess.py  main.cc  mainwin.ui  readimage.py  ui_dlgresultprogress.py  ui_dlgunwrap.py  ui_mainwin.py  unwrap.cc  unwrap.h  unwrap.py  unwrap_gears.c  unwrap_gears.h  unwrapdata.py  unwrapgui.py  unwrapimage.py  unwrappixmapitem.py  unwrapprocess.py  windowed_unwrap.c
uml/: fringeproc.xmi.tgz
utils/: CMakeLists.txt  utils.cc  utils.h  utils_config.h
